feat: make breaking changes to support native multi-chain behavior
